Fix that header overlaps property tabs in edit mode

--- a/themes/deltares-theme/src/css/global/_header.scss
+++ b/themes/deltares-theme/src/css/global/_header.scss
@@ -34,7 +34,7 @@
 
 @media (min-width: 1024px) {
   #header {
-    position: fixed;
+    position: unset;
     transform: translate(0, 0);
     transition: all .2s ease-out .1s;
 
